--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.4",
     "sort-by": "^1.2.0",
