--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0",
     "react-tabs": "^6.0.2",
+    "react-to-pdf": "^1.0.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.4",
     "sort-by": "^1.2.0",
