--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "firebase": "^10.11.1",
     "framer-motion": "^11.2.0",
+    "html2canvas": "^1.4.1",
+    "html2canvas-pro": "^1.5.8",
+    "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
