--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.7.0",
     "firebase": "^10.11.1",
     "framer-motion": "^11.2.0",
     "html2canvas": "^1.4.1",
